example(ai) improve examples
